--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -136,7 +136,7 @@ noSQLRepositoryTranslator.MONGODB_3_2_X=MongoDB 3.2.X
 noSQLRepositoryTranslator.MONGODB_3_5_X=MongoDB 3.5.X
 
 noSQLRepositoryTranslator.CASSANDRA=Cassandra
-noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
+noSQLRepositoryTranslator.CASSANDRA_2_0_0=CASSANDRA_2_0_0=Cassandra 2.0.x (Deprecated)/2.1.x
 noSQLRepositoryTranslator.CASSANDRA_3_0=Cassandra 3.x/3.0.x
 noSQLRepositoryTranslator.CASSANDRA_2_2=Cassandra 2.2.x
 
