--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_en.properties
@@ -16,7 +16,7 @@ CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (Deprecated)
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
 SET_READ_PREFERENCE.NAME=Set read preference
 READ_PREFERENCE.NAME=Read Preference
 READ_PREFERENCE.ITEM.PRIMARY=Primary
