--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_fr.properties
@@ -11,7 +11,7 @@ CONNECTION.NAME=Connexion
 AUTHENTICATION.NAME=Authentification
 DB_VERSION.NAME=Version de la base de donn\u00e9es
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
 SET_READ_PREFERENCE.NAME=Configurer les pr\u00e9f\u00e9rences de lecture
 READ_PREFERENCE.NAME=Pr\u00e9f\u00e9rences de lecture
 READ_PREFERENCE.ITEM.PRIMARY=Primaire
