--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_sk.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_sk.properties
@@ -5,4 +5,4 @@ USERNAME.NAME=U\u017E\u00edvate\u013Esk\u00e9 Meno
 CONNECTION.NAME=Pripojenie
 AUTHENTICATION.NAME=Autentifik\u00e1cia
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
