--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_en.properties
@@ -56,7 +56,7 @@ REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (Deprecated)
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
 MAPPING.ITEM.REMOVE_NULL_FIELD=Remove Null Field
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication)
 CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
