--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_sk.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_sk.properties
@@ -6,5 +6,5 @@ PORT.NAME=Port
 USERNAME.NAME=U\u017E\u00edvate\u013Esk\u00e9 Meno
 AUTHENTICATION.NAME=Autentifik\u00e1cia
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
 COMMAND_KEYVALUES.ITEM.KEY=K\u013E\u00fa\u010D
