--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_en.properties
@@ -27,7 +27,7 @@ REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (Deprecated)
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication)
 DATA_ACTION.ITEM.SET=Set
 DATA_ACTION.ITEM.UPSERT_WITH_SET=Upsert with set
