--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_sk.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_sk.properties
@@ -8,4 +8,4 @@ PORT.NAME=Port
 SCHEMA.NAME=Sch\u00e9ma
 USERNAME.NAME=U\u017E\u00edvate\u013Esk\u00e9 Meno
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
