fix(TUP-15692)Check fail for Second Neo4j 2.2.x connection when I already checked Neo4j 2.1.x connection https://jira.talendforge.org/browse/TUP-15692

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -154,4 +154,5 @@ noSQLRepositoryTranslator.NEO4J_2_3_X=Neo4J 2.3.X
 noSQLRepositoryTranslator.NEO4J_3_2_X=Neo4J 3.2.X
 
 noSQLRepositoryTranslator.NEO4J=Neo4j
+noSQLConnectionTest.cancelCheckConnection=Check connection canceled.
 
