--- a/main/plugins/org.talend.oozie.scheduler/src/messages.properties
+++ b/main/plugins/org.talend.oozie.scheduler/src/messages.properties
@@ -66,6 +66,7 @@ ExecuteJobComposite.fromRepositorytoolTip=Select a model to load oozie
 ExecuteJobComposite.Server=Server
 
 OozieMonitoringComposite.linkText=No mozilla support detected for the browser, monitoring unavailable.\n Please open the link manually: <a href=" {0} "> {1} </a>
+OozieMonitoringComposite.errorUrl=the url can not be empty
 
 ExecuteJobCompositeController.doRunAction.Exception.title=Error
 ExecuteJobCompositeController.doRunAction.Exception.message=An error occured ({0}).
@@ -73,3 +74,4 @@ ExecuteJobCompositeController.doRunAction.Exception.message=An error occured ({0
 OozieExecutingPreferencePage.executionSettingsGroup.label=Execution Settings
 OozieExecutingPreferencePage.statusTimeoutField.label=Job Status Timeout
 OozieExecutingPreferencePage.statusTimeoutField.tooltip=Specify the timeout of achieving job execution status. Default is "-1" which means \ndisable the timeout. The unit is second.
+
