--- a/i18n/plugins/org.talend.designer.hdfsbrowse.nl/pom.xml
+++ b/i18n/plugins/org.talend.designer.hdfsbrowse.nl/pom.xml
@@ -9,4 +9,8 @@
   </parent>
   <artifactId>org.talend.designer.hdfsbrowse.nl</artifactId>
   <packaging>eclipse-plugin</packaging>
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+        <outputDirectory>bin</outputDirectory>
+    </build>
 </project>
