--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages_en.properties
@@ -25,3 +25,9 @@ SET_KRB5_CONF.NAME=Set kerberos configuration path
 KAFKA_VERSION.ITEM.KAFKA_0_10_0_1=Kafka 0.10.0.1
 DIE_ON_ERROR.NAME=Die on error
 KAFKA_VERSION.ITEM.KAFKA_1_1_0=Kafka 1.1.0
+
+
+HEADERS.NAME=Set Headers
+KAFKA_HEADERS_PROPERTIES.NAME=Headers
+KAFKA_HEADERS_PROPERTIES.ITEM.KEY=Key
+KAFKA_HEADERS_PROPERTIES.ITEM.VALUE=Value
