--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -44,7 +44,11 @@ HadoopClusterForm.text.jobHistory=Job History
 HadoopClusterForm.text.stagingDirectory=Staging directory
 HadoopClusterForm.button.useDNHost=Use datanode hostname
 HadoopClusterForm.button.useCustomConf=Use custom hadoop confs
+HadoopClusterForm.button.overrideCustomConf=Set path to custom Hadoop configuration JAR
+HadoopClusterForm.button.overrideCustomConfPath.browse=Select Hadoop configuration file from local file system
 HadoopClusterForm.button.useSparkProperties=Use Spark Properties
+HadoopClusterForm.button.config=Configuration
+HadoopClusterForm.group.customConf=Custom Hadoop configuration
 HadoopClusterForm.authenticationSettings=Authentication
 HadoopClusterForm.button.kerberos=Enable kerberos security
 HadoopClusterForm.text.namenodePrincipal=Namenode Principal
@@ -69,6 +73,7 @@ HadoopClusterForm.check.maprTCluster=Cluster Name must be specified
 HadoopClusterForm.check.maprTCluster.invalid=Cluster Name is invalid
 HadoopClusterForm.check.maprTDuration=Ticket Duration must be specified
 HadoopClusterForm.check.maprTDuration.invalid=Ticket Duration is invalid
+HadoopClusterForm.check.overrideCustomConf.warn=Studio will use the configuration jar from the path you configured, instead of the custom configuration.
 
 HadoopClusterForm.button.check=Check Services
 HadoopClusterForm.checkServices.warning1=Note that the check of services may fail if the connection needs some specific Hadoop properties,
