--- a/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
+++ b/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
@@ -4,6 +4,7 @@ DynamicModuleAdapter.monitor.buildModule=Collecting dependencies of {0}, mvn uri
 DynamicModuleAdapter.exception.exclusion.unsupport=Don't support to add exclusions for {0}, currently only support BASE type
 DynamicModuleAdapter.exception.reference.notFound=can't find existing library: {0}
 DynamicModuleAdapter.exception.version.notFound=Can't find corresponding version of {0} for {1}:{2}
+DynamicModuleAdapter.exception.wrongConfig=The template configuration of {0} is not right, please check.
 DynamicModuleGroupAdapter.monitor.buildModuleGroup=Generating module group for {0}
 DynamicModuleGroupAdapter.exception.noModuleAdapterFound=Something wrong when collecting dependencies of {0} in {1}
 DynamicDistriConfigAdapter.diffDistri=Different distribution: {0} <> {1}
